--- a/_config.yml
+++ b/_config.yml
@@ -49,8 +49,8 @@ linkedin_username: albertogomezmartin
 about_title: Sobre mi
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
-    
-    Soy Ingeniero de Localización y Software con una sólida formación en el sector educativo, tras trabajar en 2014 para <mark>Grupo MT</mark> como profesor de lengua inglesa, pude estar en contacto con la gestión de proyectos educativos y ser consciente de la importancia de una enseñanza innovadora y personalizada.
+
+    Español de nacimiento, he vivido en Londres durante más de una década, ciudad en la que realicé mis estudios superiores y el principio de mi vida profesional. Soy Ingeniero de Localización y Software con formación previa en el sector educativo, tras trabajar en 2014 para <mark>Grupo MT</mark> y otras instituciones británicas como profesor de lengua inglesa y español respectivamente. Gracias a estas experiencias vi la importancia de la gestión de proyectos educativos y de una enseñanza innovadora y personalizada.
 
     A lo largo de mi carrera profesional, he desarrollado habilidades técnicas y de <mark>gestión de proyectos</mark> trabajando en diversos entornos, desde el sector de la localización hasta el desarrollo de software. Sin embargo, mi pasión por la educación y el crecimiento personal de los estudiantes me ha llevado a buscar una oportunidad para regresar al ámbito educativo. Estoy motivado por la posibilidad de gestionar proyectos que contribuyan al aprendizaje de una forma divertida y dinámica, tal como lo hacía cuando colaboré con <mark>Grupo MT</mark> en 2014.
 
