--- a/_config.yml
+++ b/_config.yml
@@ -50,11 +50,10 @@ about_title: Sobre mi
 about_profile_image: images/profile.png
 about_content: | # this will include new lines to allow paragraphs
 
-    Español de nacimiento, he vivido en Londres durante más de una década, ciudad en la que realicé mis estudios superiores y el principio de mi vida profesional. Soy Ingeniero de Localización y Software con formación previa en el sector educativo, tras trabajar en 2014 para <mark>Grupo MT</mark> y otras instituciones británicas como profesor de lengua inglesa y español respectivamente. Gracias a estas experiencias vi la importancia de la gestión de proyectos educativos y de una enseñanza innovadora y personalizada.
-
-    A lo largo de mi carrera profesional, he desarrollado habilidades técnicas y de <mark>gestión de proyectos</mark> trabajando en diversos entornos, desde el sector de la localización hasta el desarrollo de software. Sin embargo, mi pasión por la educación y el crecimiento personal de los estudiantes me ha llevado a buscar una oportunidad para regresar al ámbito educativo. Estoy motivado por la posibilidad de gestionar proyectos que contribuyan al aprendizaje de una forma divertida y dinámica, tal como lo hacía cuando colaboré con <mark>Grupo MT</mark> en 2014.
-
-    Mi enfoque profesional está centrado en la <mark>gestión de equipos y proyectos</mark>, y poseo una visión integral del trabajo colaborativo en entornos de aprendizaje. Estoy particularmente interesado en esta oportunidad dentro de un equipo innovador y comprometido con el desarrollo de actividades educativas que potencien el aprendizaje de los alumnos.
+    Español de nacimiento, viví en Londres más de una década, donde inicié mi carrera profesional.
+    Soy Ingeniero de Localización y Software con experiencia educativa, habiendo trabajado en 2014 para <mark>Grupo MT</mark> y en instituciones británicas como profesor.
+    Durante mi carrera, he gestionado proyectos traducción de cursos e-learning con herramientas como <mark>Articulate</mark> responsables de crear experiencias de aprendizaje innovadoras.
+    Mi enfoque está en la gestión de equipos y proyectos, y busco regresar al sector educativo para contribuir al aprendizaje dinámico y personalizado, como lo hice en mi experiencia con <mark>Grupo MT</mark>.
 
 content:
 
